refactor:lua best practices